--- a/Descritiva_II/Atividade_02_Mod_10_Samuel_Saturno.ipynb
+++ b/Descritiva_II/Atividade_02_Mod_10_Samuel_Saturno.ipynb
@@ -1050,9 +1050,7 @@
         "* O teste t-valor é -7.78.\n",
         "* O valor p é 7.62e-15.\n",
         "* O valor p extremamente baixo (praticamente zero) indica uma diferença estatisticamente significativa nas médias de renda entre os grupos definidos pela posse de veículo.\n",
-        "* Isso sugere que a posse de veículo é um preditor muito forte da renda no conjunto de dados. Indivíduos com posse de veículo têm uma renda\n",
-        "\n",
-        "### consideravelmente diferente daqueles sem posse de veículo.\n",
+        "* Isso sugere que a posse de veículo é um preditor muito forte da renda no conjunto de dados. Indivíduos com posse de veículo têm uma renda consideravelmente diferente daqueles sem posse de veículo.\n",
         "\n",
         "\n",
         "Esses insights sugerem que tanto a posse de imóvel quanto a posse de veículo são variáveis importantes na predição da renda das pessoas no conjunto de dados. Essas descobertas podem ter implicações significativas em análises mais detalhadas ou na construção de modelos preditivos de renda.\n"
@@ -1060,15 +1058,6 @@
       "metadata": {
         "id": "U3hSKWFLmHqM"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "L2SKHolMmMfL"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ],
   "metadata": {
