--- a/Módulo 14: Scripting/Mod_14_Tarefa_2_samuel_saturno.ipynb
+++ b/Módulo 14: Scripting/Mod_14_Tarefa_2_samuel_saturno.ipynb
@@ -1,122 +1,120 @@
 {
-  "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "Ep3mlD8fMVcQ"
-      },
-      "source": [
-        "<img src=\"https://raw.githubusercontent.com/andre-marcos-perez/ebac-course-utils/main/media/logo/newebac_logo_black_half.png\" alt=\"ebac-logo\">\n",
-        "\n",
-        "---\n",
-        "\n",
-        "# **Módulo 14** | Scripting\n",
-        "Caderno de **exercício**<br>\n",
-        "\n",
-        "# Tarefa 2\n",
-        "\n",
-        "Discente: Samuel Saturno"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Importando a função criada para pesquisa os dados mês a mês do dataframe SINASC_RO_2019\n",
-        "from analise_sinasc import processa_dados"
-      ],
-      "metadata": {
-        "id": "zsCOzLxcTPLU"
-      },
-      "execution_count": 6,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Solicita ao usuário o mês desejado\n",
-        "mes = input(\"Digite o mês desejado (jan, fev, mar, abr, mai, jun, jul, ago, set, out, nov, dez): \")\n",
-        "\n",
-        "# Chama a função usando o subprocess e o comando desejado\n",
-        "comando = f\"python analise_sinasc.py {mes}\"\n",
-        "resultado = subprocess.run(comando, shell=True)\n",
-        "\n",
-        "# Verifica se o comando foi executado com sucesso\n",
-        "if resultado.returncode == 0:\n",
-        "    print(\"Comando executado com sucesso!\")\n",
-        "else:\n",
-        "    print(\"Ocorreu um erro ao executar o comando.\")\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "xlrHq4IFtkAR",
-        "outputId": "0c05a2ce-fb86-4910-cd9a-17030226903e"
-      },
-      "execution_count": 7,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Digite o mês desejado (jan, fev, mar, abr, mai, jun, jul, ago, set, out, nov, dez): jun\n",
-            "Comando executado com sucesso!\n"
-          ]
-        }
-      ]
-    }
-  ],
-  "metadata": {
-    "kernelspec": {
-      "display_name": "Python 3 (ipykernel)",
-      "language": "python",
-      "name": "python3"
-    },
-    "language_info": {
-      "codemirror_mode": {
-        "name": "ipython",
-        "version": 3
-      },
-      "file_extension": ".py",
-      "mimetype": "text/x-python",
-      "name": "python",
-      "nbconvert_exporter": "python",
-      "pygments_lexer": "ipython3",
-      "version": "3.11.5"
-    },
-    "varInspector": {
-      "cols": {
-        "lenName": 16,
-        "lenType": 16,
-        "lenVar": 40
-      },
-      "kernels_config": {
-        "python": {
-          "delete_cmd_postfix": "",
-          "delete_cmd_prefix": "del ",
-          "library": "var_list.py",
-          "varRefreshCmd": "print(var_dic_list())"
-        },
-        "r": {
-          "delete_cmd_postfix": ") ",
-          "delete_cmd_prefix": "rm(",
-          "library": "var_list.r",
-          "varRefreshCmd": "cat(var_dic_list()) "
-        }
-      },
-      "types_to_exclude": [
-        "module",
-        "function",
-        "builtin_function_or_method",
-        "instance",
-        "_Feature"
-      ],
-      "window_display": false
-    },
-    "colab": {
-      "provenance": []
-    }
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "Ep3mlD8fMVcQ"
+   },
+   "source": [
+    "<img src=\"https://raw.githubusercontent.com/andre-marcos-perez/ebac-course-utils/main/media/logo/newebac_logo_black_half.png\" alt=\"ebac-logo\">\n",
+    "\n",
+    "---\n",
+    "\n",
+    "# **Módulo 14** | Scripting\n",
+    "Caderno de **exercício**<br>\n",
+    "\n",
+    "# Tarefa 2\n",
+    "\n",
+    "Discente: Samuel Saturno"
+   ]
   },
-  "nbformat": 4,
-  "nbformat_minor": 0
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "id": "zsCOzLxcTPLU"
+   },
+   "outputs": [],
+   "source": [
+    "# Importando a função criada para pesquisa os dados mês a mês do dataframe SINASC_RO_2019\n",
+    "from analise1_sinasc import processa_dados"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "id": "jztAeLR1dkn9",
+    "outputId": "6b027806-3b74-4543-c22a-63167ea41c9a"
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/sos/anaconda3/lib/python3.11/site-packages/pandas/plotting/_matplotlib/core.py:509: RuntimeWarning: More than 20 figures have been opened. Figures created through the pyplot interface (`matplotlib.pyplot.figure`) are retained until explicitly closed and may consume too much memory. (To control this warning, see the rcParam `figure.max_open_warning`). Consider using `matplotlib.pyplot.close()`.\r\n",
+      "  fig = self.plt.figure(figsize=self.figsize)\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!python analise1_sinasc.py jun jul mai ago"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "5D-g5Sikg_Zk"
+   },
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "colab": {
+   "provenance": []
+  },
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.5"
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 1
 }
