--- a/Módulo 23 : Combinação de modelos I/Mod23_T2_Samuel_Saturno.ipynb
+++ b/Módulo 23 : Combinação de modelos I/Mod23_T2_Samuel_Saturno.ipynb
@@ -239,9 +239,7 @@
     {
       "cell_type": "code",
       "source": [
-        "from sklearn.datasets import load_iris\n",
-        "from sklearn.model_selection import train_test_split\n",
-        "from sklearn.ensemble import RandomForestClassifier\n",
+        "# Importando as Bibliotecas\n",
         "from sklearn.tree import export_graphviz\n",
         "import graphviz\n",
         "\n",
@@ -280,9 +278,9 @@
           "height": 89
         },
         "id": "NlteG-_3Luzm",
-        "outputId": "0ba09101-e1b3-4eb3-bbd7-a64b10028fbe"
+        "outputId": "9178c04a-4053-44ae-f6ef-5e1581416305"
       },
-      "execution_count": 2,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -303,7 +301,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 2
+          "execution_count": 4
         }
       ]
     }
